@@ -1,3 +1,8 @@
+2008-04-07  Ian Lance Taylor  <iant@google.com>
+
+	* Makefile.def: check-gold depends upon all-binutils.
+	* Makefile.in: Regenerate.
+
 2008-04-04  Nick Clifton  <nickc@redhat.com>
 
 	PR binutils/4334
